refactored aas->things and use resource_uri as external ids
